Change Log for OpenXava project
===============================

- Fix: Adding an element to a collection of entity with @Embedded fails.
- Fix: Deleting from list mode with @EmbeddedId fails.
- Fix: Labels for excel generation in list mode are not qualified.
- Fix: @DescriptionsList combos with tildes opened by default with Internet Explorer 11.
- Fix: New element in an @OrderColumn list with @OneToMany without cascade fails.
- Fix: Getting started guides still make references to configure Tomcat inside Eclipse. 
- Fix: Calling getEntity() from an @OnChange action of a references throws an exception.
- Fix: Error creating an entity with a collection with @Size(min=) and new ArrayList<>() in the declaration. 
- Fix: ModuleTestBase.login() does not find the user field from time to time.
- Migration documentation for adapting views to new FILES stereotype.
- Fix: Module loses its state from time to time under high load on server.

OpenXava 6.2.1 (2019-11-5)
--------------------------
- Some new common use labels to be used in applications.
- Fix: Eclipse compilation errors on open OpenXava workspace because it is not refreshed on startup.
- Fix: Print &quot;, &lt and &gt; instead of ", < and > in PDF reports.
- Fix: Saving an element in a nested collection if root collection is not cascade remove fails.
- Fix: New action of a collection inside a collection element of a not cascade remove collection fails.
- Fix: View.setFocus() does not select the text of the focused editor.
- Fix: Keystrokes for hidden actions work and should not.
- Fix: Reloading page from browser in a multipart form (from ILoadFileAction) produces an infinite loop.
- Fix: Broken links in the menu of the Spanish doc for Custom Style, FAQ and Course.
- Fix: Bad alignment of editors when combining small label with no label or regular label. 
- Fix: Bad alignment of checkboxes and action links inside detail. 
- Fix: @OnChange doesn't work for PHOTO, IMAGES_GALLERY, FILE, FILES and FileItem properties.