@@ -257,8 +257,10 @@ public class XPersistence {
 	}
 	
 	private static String getHibernateDefaultSchemaPropertyName() { 
-		String dialect = (String) getEntityManagerFactory().getProperties().get("hibernate.dialect");
+		Map<String, Object> properties = getEntityManagerFactory().getProperties();
+		String dialect = (String) properties.get("hibernate.dialect");
 		if (dialect != null && dialect.toLowerCase().contains("mysql")) return "hibernate.default_catalog";
+		if (!Is.emptyString((String)properties.get("hibernate.default_catalog"))) return "hibernate.default_catalog";
 		return "hibernate.default_schema";
 	}
 	
