@@ -63,20 +63,35 @@
 	maxTotal="100" maxIdle="20" maxWaitMillis="10000"
 	username="root" password="ao49fmsk"
 	driverClassName="com.mysql.jdbc.Driver"
-	url="jdbc:mysql://localhost:3306/myappdb"/&gt;
+	url="jdbc:mysql://localhost:3306/"/&gt;
 </code></pre> </div>
     <div class="wiki" style="display: block;">The differences are the <i>driverClassName</i>
-      and the <i>url</i>. The final part of the <i>url</i>, <i>myappdb</i> in
-      this example, is the name of your MySQL database. Obviously, instead of <i>localhost</i>
-      you should put the address of the server that hosts MySQL, and also put
-      the correct <i>username</i> and <i>password</i>.</div>
+      and the <i>url</i>. Obviously, instead of <i>localhost</i> you should
+      put the address of the server that hosts MySQL, and also put the correct <i>username</i>
+      and <i>password</i>.</div>
     <div class="wiki" style="display: block;">
       <h2 id="toc1">Update persistence.xml</h2>
-      You don't need to touch the <i>default</i> persistence unit of <i>persistence.xml</i>
-      (in <i>persistence/META-INF</i>), unless you use <i>hibernate.dialect</i>
-      property in which case just remove <i>hibernate.dialect</i> property.
-      However, you have to modify the <i>junit</i> persistence unit to point to
-      MySQL. <br>
+      In the <i>default</i> persistence unit of <i>persistence.xml</i> (in <i>persistence/META-INF</i>)
+      you have to change the <i>hibernate.default_schema</i> property by <i>hibernate.default_catalog.</i>
+      Also, if you use <i>hibernate.dialect</i> property just remove it.<br>
+      <div class="wiki" style="display: block;">
+        <pre><code class="xml">&lt;persistence-unit name="default"&gt;
+	&lt;provider&gt;org.hibernate.jpa.HibernatePersistenceProvider&lt;/provider&gt;
+	&lt;non-jta-data-source&gt;java://comp/env/jdbc/MyAppDS&lt;/non-jta-data-source&gt;
+	&lt;class&gt;org.openxava.session.GalleryImage&lt;/class&gt;
+	&lt;class&gt;org.openxava.web.editors.DiscussionComment&lt;/class&gt;
+	&lt;properties&gt;
+		&lt;property name="javax.persistence.schema-generation.database.action" value="update"/&gt;
+		&lt;property name="javax.persistence.create-database-schemas" value="true"/&gt; 
+		&lt;property name="hibernate.default_catalog" value="myappdb"/&gt;
+		&lt;property name="hibernate.jdbc.use_streams_for_binary" value="true"/&gt;
+	&lt;/properties&gt;
+&lt;/persistence-unit&gt;
+</code></pre> </div>
+      Note as we use <i>hibernate.default_catalog</i> to indicate your MySQL
+      database, <i>myappdb</i> in this case.</div>
+    <div class="wiki" style="display: block;"> Morever, you have to modify the <i>junit</i>
+      persistence unit to point to MySQL. <br>
       <div class="wiki" style="display: block;">
         <pre><code class="xml">&lt;!-- JUnit MySQL --&gt;
 &lt;persistence-unit name="junit"&gt;
