@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- Fix: XPersistence.setDefaultSchema() does to work for MySQL if dialect is not specified.
 - Fix: Adding an element to a collection of entity with @Embedded fails.
 - Fix: Deleting from list mode with @EmbeddedId fails.
 - Fix: Labels for excel generation in list mode are not qualified.
